# webcomputing

./: README.md
server/: Cargo.toml  README.md  hello-wasi.wasm  index.html  uploadfile.html
server/src/: main.rs
