[package]
name = "server"
version = "0.1.0"
authors = ["lukaszglen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3.0"
serde = "1"
actix-multipart = "0.3"
futures = "0.3.1"
async-std = "1.4.0"
sanitize-filename = "0.2"
rand = "0.7.3"
lazy_static = "1.4.0"
